Switching PWM direction
Added the ability to switch the PWM direction by altering the map values when a given button interrupt is heard

--- a/RC_Plane_Transmitter.ioc
+++ b/RC_Plane_Transmitter.ioc
@@ -32,6 +32,7 @@ Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlign
 Dma.Request0=ADC1
 Dma.RequestsNb=1
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
@@ -47,21 +48,28 @@ Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0 - OSC_IN
 Mcu.Pin1=PH1 - OSC_OUT
-Mcu.Pin10=PD5
-Mcu.Pin11=PD6
-Mcu.Pin12=PB8
-Mcu.Pin13=PB9
-Mcu.Pin14=VP_SYS_VS_tim1
-Mcu.Pin15=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin2=PA0-WKUP
-Mcu.Pin3=PA1
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
-Mcu.Pin6=PA5
-Mcu.Pin7=PA6
-Mcu.Pin8=PA7
-Mcu.Pin9=PD15
-Mcu.PinsNb=16
+Mcu.Pin10=PA5
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PD12
+Mcu.Pin14=PD13
+Mcu.Pin15=PD14
+Mcu.Pin16=PD15
+Mcu.Pin17=PD5
+Mcu.Pin18=PD6
+Mcu.Pin19=PB8
+Mcu.Pin2=PC0
+Mcu.Pin20=PB9
+Mcu.Pin21=VP_SYS_VS_tim1
+Mcu.Pin22=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin3=PC1
+Mcu.Pin4=PC2
+Mcu.Pin5=PC3
+Mcu.Pin6=PA0-WKUP
+Mcu.Pin7=PA1
+Mcu.Pin8=PA2
+Mcu.Pin9=PA3
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -71,6 +79,10 @@ NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -101,6 +113,34 @@ PB9.GPIOParameters=GPIO_Label
 PB9.GPIO_Label=CEpin
 PB9.Locked=true
 PB9.Signal=GPIO_Output
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=Button0
+PC0.Locked=true
+PC0.Signal=GPXTI0
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=Button1
+PC1.Locked=true
+PC1.Signal=GPXTI1
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=Button2
+PC2.Locked=true
+PC2.Signal=GPXTI2
+PC3.GPIOParameters=GPIO_Label
+PC3.GPIO_Label=Button3
+PC3.Locked=true
+PC3.Signal=GPXTI3
+PD12.GPIOParameters=GPIO_Label
+PD12.GPIO_Label=Green_LED
+PD12.Locked=true
+PD12.Signal=GPIO_Output
+PD13.GPIOParameters=GPIO_Label
+PD13.GPIO_Label=Orange_LED
+PD13.Locked=true
+PD13.Signal=GPIO_Output
+PD14.GPIOParameters=GPIO_Label
+PD14.GPIO_Label=Red_LED
+PD14.Locked=true
+PD14.Signal=GPIO_Output
 PD15.GPIOParameters=GPIO_Label
 PD15.GPIO_Label=Blue_LED
 PD15.Locked=true
@@ -185,6 +225,14 @@ SH.ADCx_IN2.0=ADC1_IN2,IN2
 SH.ADCx_IN2.ConfNb=1
 SH.ADCx_IN3.0=ADC1_IN3,IN3
 SH.ADCx_IN3.ConfNb=1
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
+SH.GPXTI1.0=GPIO_EXTI1
+SH.GPXTI1.ConfNb=1
+SH.GPXTI2.0=GPIO_EXTI2
+SH.GPXTI2.ConfNb=1
+SH.GPXTI3.0=GPIO_EXTI3
+SH.GPXTI3.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
 SPI1.CalculateBaudRate=2.625 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
